<resources>
    <string name="app_name">AN Shoe House</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_content_desc">Next</string>
    <string name="first_time">First time</string>
    <string name="ShopTitle">Browse Our Premium Collection</string>
    <string name="image_url">image url</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="signout">signout</string>
</resources>